--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
 				}
 				slides2[slideIndex2 - 1].style.display = "block";
 			}
-			
+			function ricaricaHomePage(){
+				window.location.reload();
+			}
 			
 		</script>
 
