--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 	
 
@@ -23,26 +23,26 @@
 		<table class="intestazione">
 			<tr>
 				<td width=11%> <a class="link" onclick="ricaricaHomePage()" style="color: #e8bd00">[Home]</a> </td>
-				<td width=14%> <a class="link">[Chi Siamo] </a></td>
-				<td width=30%> <div class="tendina"><a class="link">[Amministrazione Trasparente]</a> 
+				<td width=14%> <a class="link" href="https://www.aster.mn.it/chi-siamo">[Chi Siamo] </a></td>
+				<td width=30%> <div class="tendina"><a class="link" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente">[Amministrazione Trasparente]</a> 
 				<div class="tendina-content">
-						<a class="link2"><div>Disposizioni Generali</div></a>
-						<a class="link2"><div>Organizzazione</div></a>
-						<a class="link2"><div>Consulenti e Collaboratori</div></a>
-						<a class="link2"><div>Personale</div></a>
-						<a class="link2"><div>Ricerca e selezione del personale</div></a>
-						<a class="link2"><div>Performance</div></a>
-						<a class="link2"><div>Enti Controllati</div></a>
-						<a class="link2"><div>Attività e procedimenti</div></a>
-						<a class="link2"><div>Bandi di Gara e Contratti</div></a>
-						<a class="link2"><div>Bilanci</div></a>
-						<a class="link2"><div>Beni immobili e gestione patrimonio</div></a>
-						<a class="link2"><div>Controlli e rilievi sull'amministrazione</div></a>
-						<a class="link2"><div>Opere pubbliche</div></a>
-						<a class="link2"><div>Informazioni ambientali</div></a>
-						<a class="link2"><div>Pagamenti</div></a>
-						<a class="link2"><div>Altri contenuti - Prevenzione della Corruzione</div></a>
-						<a class="link2"><div>Altri contenuti</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/disposizioni-generali"><div>Disposizioni Generali</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/organizzazione"><div>Organizzazione</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/consulenti-e-collaboratori"><div>Consulenti e Collaboratori</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/personale"><div>Personale</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/ricerca-e-selezione-del-personale"><div>Ricerca e selezione del personale</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/performance"><div>Performance</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/enti-controllati"><div>Enti Controllati</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/attività-e-procedimenti"><div>Attività e procedimenti</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/bandi-di-gara-e-contratti"><div>Bandi di Gara e Contratti</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/bilanci"><div>Bilanci</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/beni-immobili-e-gestione-patrimonio"><div>Beni immobili e gestione patrimonio</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/controlli-e-rilievi-sull-amministrazione"><div>Controlli e rilievi sull'amministrazione</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/opere-pubbliche"><div>Opere pubbliche</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/informazioni-ambientali"><div>Informazioni ambientali</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/pagamenti"><div>Pagamenti</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/altri-contenuti-prevenzione-della-corruzione"><div>Altri contenuti - Prevenzione della Corruzione</div></a>
+						<a class="link2" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente/altri-contenuti"><div>Altri contenuti</div></a>
 					 </div>
 					 </div>
 				</td>
@@ -122,48 +122,47 @@
 
 
 <!-- Carosello Immagini -->
-<div class="contenitore">
+<div class="contenitore" style="background-color:#746f63">
 	<div class="divCarosello" style="position: relative;">
-		<a href="https://www.aster.mn.it"><img class="mySlides slide" src="VisitareCitta.jpg" style="width:100%; height:auto;" alt="Visitare la Città"></a>
-		<a href="https://www.aster.mn.it"><img class="mySlides slide" src="ParcheggieZTL.jpg" style="width:100%; height:auto;" alt="ParcheggieZTL"></a>
-		<a href="https://www.aster.mn.it"><img class="mySlides slide" src="ServiziAbitativi.jpg" style="width:100%; height:auto;" alt="ServiziAbitativi"></a>
+		<a href="https://www.aster.mn.it/turista/servizi-turismo"><img class="mySlides" src="VisitareCitta.jpg" alt="Visitare la Città"></a>
+		<a href="https://comunicazione90.wixsite.com/pass-aster"><img class="mySlides" src="ParcheggieZTL.jpg" alt="ParcheggieZTL"></a>
+		<a href="https://www.aster.mn.it/casa-e-orti-sociali/casa-e-orti-sociali"><img class="mySlides" src="ServiziAbitativi.jpg" alt="ServiziAbitativi"></a>
 		<!--- SCRIPT -->
-		
-		<button class="buttonCaroselloL" onclick="prevSlide()" style="cursor:pointer"> <b> &#8249 </b> </button>
-		<button class="buttonCaroselloR" onclick="showSlides()" style="cursor:pointer"> <b> &#8250 </b> </button>
+			<button class="buttonCaroselloL" onclick="prevSlide()" style="cursor:pointer"> <b> &#8249 </b> </button>
+			<button class="buttonCaroselloR" onclick="showSlides()" style="cursor:pointer"> <b> &#8250 </b> </button>
 	</div>
 	
 	<div class="divCaroselloNews" style="padding-top: 2%; padding-bottom: 2%; padding-right: 2%;">
 		<div style="background-color: #746f63; color:white; font-size: 40px; border:0; font-family: 'Poppins', sans-serif; width: 98%; padding-bottom:15px; margin-left: 3%;text-align: left; margin-right: 6%"> [News] </div>
-		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewListaNews?id=621&lang=ita">
+		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewContent?id=8906&lang=ita">
 		<div class="divNews">
 			<div style="padding-bottom: 10px; padding-top: 5px;font-weight:bold; line-height: 21px; font-size:22px"> NUOVO NUMERO 0376/1969555 </div>
 			<div style="padding-bottom: 10px; padding-top: 5px;"><small style="color: #746f63">06 ottobre 2023</small></div>
 			<div style="font-size:16px; line-height: 14px;" > 0376/1969555 è il nuovo numero ASTER attivo da...</div>
 		</div>
 		</a>
-		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewListaNews?id=621&lang=ita">
+		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewContent?id=8046&lang=ita">
 		<div class="divNews">
 			<div style=" padding-bottom: 10px; padding-top: 5px;font-weight:bold; line-height: 21px; font-size:22px"> Bando Contributo di Solidarietà 2023 per inquilini SAP </div>
 			<div style="padding-bottom: 10px; padding-top: 5px;"><small style="color: #746f63">22 settembre 2023</small></div>
 			<div style="font-size:16px; line-height: 14px;" > Bando Contributi di solidarietà riservato agli...</div>
 		</div>
 		</a>
-		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewListaNews?id=621&lang=ita">
+		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewContent?id=7934&lang=ita">
 		<div class="divNews">
 			<div style=" padding-bottom: 10px; padding-top: 5px;font-weight:bold; line-height: 21px; font-size:22px"> Servizio pedibus Kiss&Ride A.S.2023/2024 - informazioni e modulo adesione </div>
 			<div style="padding-bottom: 10px; padding-top: 5px;"><small style="color: #746f63">13 settembre 2023</small></div>
 			<div style="font-size:16px; line-height: 14px;" > A seguito delle modifiche alla viabilità...</div>
 		</div>
 		</a>
-		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewListaNews?id=621&lang=ita">
+		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewContent?id=7719&lang=ita">
 		<div class="divNews">
 			<div style=" padding-bottom: 10px; padding-top: 5px;font-weight:bold; line-height: 21px; font-size:22px"> Graduatoria definitiva - BONUS AFFITTO 2023 </div>
 			<div style="padding-bottom: 10px; padding-top: 5px;"><small style="color: #746f63">22 agosto 2023</small></div>
 			<div style="font-size:16px; line-height: 14px;" > Si informa l'utenza che da oggi è possibile...</div>
 		</div>
 		</a>
-		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewListaNews?id=621&lang=ita">
+		<a style="text-decoration: none; color: black" href="https://www.aster.mn.it/Apps/WebObjects/Aster.woa/wa/viewContent?id=7550&lang=ita">
 		<div class="divNews">
 			<div style=" padding-bottom: 10px; padding-top: 5px;font-weight:bold; line-height: 21px; font-size:22px"> Parcheggia con le app e #sostasenzapensieri </div>
 			<div style="padding-bottom: 10px; padding-top: 5px;"><small style="color: #746f63">30 giugno 2023</small></div>
@@ -235,10 +234,10 @@
 	<div class="chiSiamo2">
 	
 		<div class="divCarosello2" style="position: relative;width:100%">
-			<a href="https://www.aster.mn.it"><img class="mySlides2 slide" src="Mantova1.png" style="width:100%; height:auto;" alt="Visitare la Città"></a>
-			<a href="https://www.aster.mn.it"><img class="mySlides2 slide" src="Mantova2.png" style="width:100%; height:auto;" alt="Visitare la Città"></a>
-			<a href="https://www.aster.mn.it"><img class="mySlides2 slide" src="Mantova3.png" style="width:100%; height:auto;" alt="Visitare la Città"></a>
-			<a href="https://www.aster.mn.it"><img class="mySlides2 slide" src="Mantova4.png" style="width:100%; height:auto;" alt="Visitare la Città"></a>
+			<img class="mySlides2" src="Mantova1.png" style="width:100%; height:auto;" alt="Visitare la Città">
+			<img class="mySlides2" src="Mantova2.png" style="width:100%; height:auto;" alt="Visitare la Città">
+			<img class="mySlides2" src="Mantova3.png" style="width:100%; height:auto;" alt="Visitare la Città">
+			<img class="mySlides2" src="Mantova4.png" style="width:100%; height:auto;" alt="Visitare la Città">
 			
 			<!---- SCRIPT    -->
 			
@@ -290,7 +289,7 @@
 
 	<div style="background-color: #969080; border: 10px solid white; padding: 2%; width: 90%; margin-left: 2%; font-weight: normal; display:inline-flex;">
 		<div style="color:white; text-align:left; font-size: 14px; font-family: arial; line-height: 1.6; width: 80%">
-			<img src="aster2.png" style="width: 200px; height:auto"></img><br><br>
+			<a onclick="ricaricaHomePage()" ><img src="aster2.png" style="width: 200px; height:auto"></img></a><br><br>
 			<b>Aster SRL </b>- Agenzia Servizi al Territorio - Via Imre Nagy, 2/4/6 - Borgochiesanuova - Mantova <br>
 			Telefono: 0376/1969555 - Fax: 0376/265021 - P.Iva e C.F. 02071790204 - REA n. 221907
 			<p style="margin-top: 20px">Capitale versato € 30.000,00</p>
@@ -298,9 +297,9 @@
 			<br>
 			<br>
 			
-			<a class="linkPrivacy" href="https://www.google.com" style="font-size: 18px">Privacy Policy</a>
-			<a class="linkPrivacy" href="https://www.google.com" style="font-size: 18px; margin-left: 10px; border-left: 2px solid white; padding-left: 10px;">Note Legali</a>
-			<a class="linkPrivacy" href="https://www.google.com" style="font-size: 18px; margin-left: 10px; border-left: 2px solid white; padding-left: 10px;">Amministrazione Trasparente</a>
+			<a class="linkPrivacy" href="https://www.aster.mn.it/privacy-policy" style="font-size: 18px">Privacy Policy</a>
+			<a class="linkPrivacy" href="https://www.aster.mn.it/note-legali" style="font-size: 18px; margin-left: 10px; border-left: 2px solid white; padding-left: 10px;">Note Legali</a>
+			<a class="linkPrivacy" href="https://www.aster.mn.it/amministrazione-trasparente/descrizione-societa-trasparente" style="font-size: 18px; margin-left: 10px; border-left: 2px solid white; padding-left: 10px;">Amministrazione Trasparente</a>
 		</div>
 		<a style="margin-left: 80px; background-color:blue; width: 100px; height: 100px; border-radius: 50px;" href="#"><button class="tornasu"><div style="margin-left: 22%;" class="chevron"></div>Torna su</button></a>
 </div>
@@ -410,6 +409,7 @@
 				}
 				slides2[slideIndex2 - 1].style.display = "block";
 			}
+			
 			function ricaricaHomePage(){
 				window.location.reload();
 			}
